fix index.html chinese

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
 	<div class="row">
 		<div class="col">
 			<button class="btn btn-purp btn-lg btn-block vanity">
-			<b>Reserve a Name:</b> Earn passive <b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b><span class="smallscreenhide"> income the moment the game starts!</span>
+			<b>保留名称：</b> Earn passive 获得被动的<b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b><span class="smallscreenhide"> 游戏开始的那一刻收入！</span>
 			</button>
 		</div>
 	</div>
   <div class="row aff">
     <div class="col">
-      <h3>Your 10% commission affiliate link</h3>
-      <code id="link">https://</code> <button data-clipboard-target="#link" class="btn btn-purp">Copy</button>
+      <h3>您的10％佣金会员链接</h3>
+      <code id="link">https://</code> <button data-clipboard-target="#link" class="btn btn-purp">复制</button>
     </div>
   </div>
 </div>
 <div>
 <div class="row">
-  <a class="countdown" href="./advice-kit.html"><p class="blink"  id="discord2">Click me: I'll help you accumulate an army</p></a>
+  <a class="countdown" href="./advice-kit.html"><p class="blink"  id="discord2">点击我：我会帮你积累一支军队</p></a>
   </div>
 </div>
 
@@ -82,15 +82,16 @@
 			<!-- Name chooser -->
 			<div class="row">
 			  <div class="col">
-				<p class="lead nomarginb">Reserve your Fomo3D Name:</p>
-				<p>Reserving your name <b>unlocks a custom referral link</b>
+				<p class="lead nomarginb">保留您的Fomo3D名称:</p>
+				<p>保留您的姓名 <b>可以解锁自定义推荐链接</b>
 				<br><br>
-				<span class=h1s-light>10%</span> of anything you encourage others to waste in our game, is rewarded to you instantly, as <b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b> that you can withdraw at any time.
+				<span class=h1s-light>10%</span> 您鼓励他人在我们的游戏中浪费的东西，会立即奖励给您，如 <b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b> 您可以随时退出。
 				<br>
-				<span style="color:#0f0" class="lead "><br>Referrals to this page are tracked!</span>
+				<span style="color:#0f0" class="lead "><br>跟踪此页面的推荐！ </span>
 				<br>				
 				<br>
-				<span class=yellowtext>When the game starts you'll instantly start earning passive income for as long as they play! <b>10 eth into the pot, is 1 eth in your pocket!</b></span></p>
+				<span class=yellowtext>当游戏开始时，你会立即开始赚取被动收入，只要他们玩！ 
+        <b>10进入锅中，是1口袋！</b></span></p>
 			  </div>
 			  <div class="col-auto">
 				<p class="text-right nomarginb">
@@ -110,29 +111,74 @@
 				</div>
 			  </div>
 			</div>
-				<p class="small">
-				<br>
-				Names must follow these rules:<br>
-				-Must be unique <i><a href="https://fomo3d.eu/">database of all names</a></i><br>
-				-32 Characters or Less<br>
-				-A-Z (upper and lowercase)<br>
-				-Name cannot be <i>just</i> numbers, but numbers are allowed<br>
-				-No special characters<br>
-				-No more than one space between characters<br>
-				<br>
-				If the transaction fails, one of these criteria was not met properly. <br>
-				<br>
-				Names are yours permanently (for vanity URLS). But only your most recent name will show up on the leaderboard/game UI. You can own as many names as you'd like.<br><br>
-				
-				Other players will frequently see your name as they challenge you for the final exit scam, make it good. They'll be jealous when you win!
-				
-				</p>
+        <p class="small">
+          <br> <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">名称必须遵循以下规则：</font></font> 
+          <br>        
+          <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">- 必须是</font></font>  <i><a href="https://fomo3d.eu/">
+              <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;">所有名称的</font>
+              </font>
+            </a></i> 
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">唯一</font> <i><a href="https://fomo3d.eu/">
+                <font style="vertical-align: inherit;">数据库</font>
+              </a></i> 
+          </font>
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">-32字符或更少</font>
+          </font>
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">-AZ（大写和小写）</font>
+          </font>
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">-Name不能</font>
+          </font>
+          <i>
+            <font style="vertical-align: inherit;">
+              <font style="vertical-align: inherit;">只是</font>
+            </font>
+          </i>
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">数字，但允许数字</font>
+          </font>
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">-</font>
+            <font style="vertical-align: inherit;">不允许</font>
+            <font style="vertical-align: inherit;">特殊字符</font>
+          </font>
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">- 字符之间不止一个空格</font>
+          </font>
+          <br>        
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">如果交易失败，其中一个标准未得到妥善处理。</font>
+          </font>
+          <br>        
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">名称是永久性的（对于虚荣URLS）。</font>
+            <font style="vertical-align: inherit;">但只有您最近的名字才会显示在排行榜/游戏用户界面上。</font>
+            <font style="vertical-align: inherit;">您可以拥有任意数量的名称。</font>
+          </font>
+          <br>        
+          <br>        
+          <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">其他玩家经常会看到你的名字，因为他们挑战你最后的退出骗局，让它变好。</font>
+            <font style="vertical-align: inherit;">当你获胜时，他们会嫉妒！</font>
+          </font>
+        </p>
 			  </div>
 			</div>
 			<div class="row">
 			  <div class="col">
-				<button class="btn btn-purp btn-block btn-lg buyXname" id="buyXname"><i class="fab fa-ethereum"></i> Purchase for 0.01 ETH</button>
-				<p style="font-size:0.7rem;color:#afafaf"> The fee is distributed across community members who made this game possible.</p>
+				<button class="btn btn-purp btn-block btn-lg buyXname" id="buyXname"><i class="fab fa-ethereum"></i> 购买 0.01 ETH</button>
+				<p style="font-size:0.7rem;color:#afafaf"> 该费用分布在使这个游戏成为可能的社区成员中。</p>
 			  </div>
 			</div>
 			<!-- /Name chooser -->
