fix index advice chinese

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<div class="row">
 		<div class="col">
 			<button class="btn btn-purp btn-lg btn-block vanity">
-			<b>保留名称：</b> Earn passive 获得被动的<b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b><span class="smallscreenhide"> 游戏开始的那一刻收入！</span>
+			<b>保留名称：</b> 获得被动的<b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b><span class="smallscreenhide"> 游戏开始的那一刻收入！</span>
 			</button>
 		</div>
 	</div>
@@ -112,66 +112,20 @@
 			  </div>
 			</div>
         <p class="small">
-          <br> <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">名称必须遵循以下规则：</font></font> 
-          <br>        
-          <font style="vertical-align: inherit;"><font style="vertical-align: inherit;">- 必须是</font></font>  <i><a href="https://fomo3d.eu/">
-              <font style="vertical-align: inherit;">
-                <font style="vertical-align: inherit;">所有名称的</font>
-              </font>
-            </a></i> 
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">唯一</font> <i><a href="https://fomo3d.eu/">
-                <font style="vertical-align: inherit;">数据库</font>
-              </a></i> 
-          </font>
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">-32字符或更少</font>
-          </font>
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">-AZ（大写和小写）</font>
-          </font>
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">-Name不能</font>
-          </font>
-          <i>
-            <font style="vertical-align: inherit;">
-              <font style="vertical-align: inherit;">只是</font>
-            </font>
-          </i>
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">数字，但允许数字</font>
-          </font>
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">-</font>
-            <font style="vertical-align: inherit;">不允许</font>
-            <font style="vertical-align: inherit;">特殊字符</font>
-          </font>
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">- 字符之间不止一个空格</font>
-          </font>
-          <br>        
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">如果交易失败，其中一个标准未得到妥善处理。</font>
-          </font>
-          <br>        
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">名称是永久性的（对于虚荣URLS）。</font>
-            <font style="vertical-align: inherit;">但只有您最近的名字才会显示在排行榜/游戏用户界面上。</font>
-            <font style="vertical-align: inherit;">您可以拥有任意数量的名称。</font>
-          </font>
-          <br>        
-          <br>        
-          <font style="vertical-align: inherit;">
-            <font style="vertical-align: inherit;">其他玩家经常会看到你的名字，因为他们挑战你最后的退出骗局，让它变好。</font>
-            <font style="vertical-align: inherit;">当你获胜时，他们会嫉妒！</font>
-          </font>
+        <br>
+        名称必须遵循以下规则：<br>
+        -必须是唯一的 <i><a href="https://fomo3d.eu/">所有名称的数据库</a></i><br>
+        -32个字符或更少<br>
+        -A-Z (大写和小写）<br>
+        -Name不能 <i>只是</i> 数字，但允许数字<br>
+        -没有特殊字符<br>
+        -字符之间不能有多个空格<br>
+        <br>
+        如果交易失败，则无法正确满足其中一个标准。点击 <br>
+        <br>
+        名称是永久性的（对于虚荣URLS）。 但只有您最近的名字才会显示在排行榜/游戏用户界面上。 您可以拥有任意数量的名称。<br><br>
+        
+        其他玩家经常会看到你的名字，因为他们挑战你最后的退出骗局，让它变好。 当你获胜时，他们会嫉妒！
         </p>
 			  </div>
 			</div>
