--- a/advice-kit.html
+++ b/advice-kit.html
@@ -57,7 +57,7 @@
 			<h1 style="color:#6e006e;font-size: 2.5vw;font-weight:200" class=poppins>顾问委员会</h1>
 			<div class="row aff">
 				<div class="col domo">
-				  <h3>Spread your bad advice</h3>
+				  <h3>传播你的坏建议</h3>
 				  <code id="link">https://broken.me</code> <button data-clipboard-target="#link" class="btn btn-outline-yel">复制</button>
 				</div>
 			 </div>
@@ -460,7 +460,7 @@
 			  </div>
 			  <div class="col poppins">
 				<b class="lead nomarginb">保留您的Fomo3D名称：</b>
-				<p>保留您的姓名可<b>解锁自定义推荐链接</b><br>
+				<p>保留您的姓名可<b>解锁自定义推荐链接,</b><br>
 				让您成为ICO的官方顾问。
 				<br>
 				<br>
