--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 			<div class="row">
 			  <div class="col">
 				<p class="lead nomarginb">保留您的Fomo3D名称:</p>
-				<p>保留您的姓名 <b>可以解锁自定义推荐链接</b>
+				<p>保留您的姓名可<b>解锁自定义推荐链接,</b>
 				<br><br>
-				<span class=h1s-light>10%</span> 您鼓励他人在我们的游戏中浪费的东西，会立即奖励给您，如 <b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b> 您可以随时退出。
+				在你的游戏中，你鼓励他人浪费的任何东西的<span class=h1s-light>10%</span>，会立即奖励给您，如 <b class=titlepopoutrightmini>Eth <i class="fab fa-ethereum"></i></b> 您可以随时退出。
 				<br>
 				<span style="color:#0f0" class="lead "><br>跟踪此页面的推荐！ </span>
 				<br>				
@@ -114,14 +114,14 @@
         <p class="small">
         <br>
         名称必须遵循以下规则：<br>
-        -必须是唯一的 <i><a href="https://fomo3d.eu/">所有名称的数据库</a></i><br>
-        -32个字符或更少<br>
-        -A-Z (大写和小写）<br>
-        -Name不能 <i>只是</i> 数字，但允许数字<br>
-        -没有特殊字符<br>
-        -字符之间不能有多个空格<br>
+        - 必须是 <i><a href="https://fomo3d.eu/">所有名称的唯一数据库</a></i><br>
+        - 32个字符或更少<br>
+        - AZ (大写和小写）<br>
+        - Name不能 <i>只是</i> 数字，但允许数字<br>
+        - 没有特殊字符<br>
+        - 字符之间不能有多个空格<br>
         <br>
-        如果交易失败，则无法正确满足其中一个标准。点击 <br>
+        如果交易失败，则无法正确满足其中一个标准。 <br>
         <br>
         名称是永久性的（对于虚荣URLS）。 但只有您最近的名字才会显示在排行榜/游戏用户界面上。 您可以拥有任意数量的名称。<br><br>
         
