--- a/buy.html
+++ b/buy.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>PoWH3D - Token Interface</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
-	<link rel="stylesheet" href="/css/alertify.css">
+	<link rel="stylesheet" href="./css/alertify.css">
 	<script
 		src="https://code.jquery.com/jquery-3.1.1.min.js"
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -139,12 +139,11 @@
 		<div class="row">
 			<div class="column" style="text-align: center;">
 			<h2 class="ui header">
-			  <img="img/powh.png"</img>
-			  <img src="img/powh.png">
-			  <div class="sub header">Powh.io Backup contract interface</div>
-			  <div class="sub header">Due to extreme site popularity, the exchange might be down, but the smart contract never sleeps.</div>
-			  <div class="sub header">Use this alternate interface to safetly check on your sweet sweet dividends.</div>
-			  <div class="sub header">If this is your first time using Metamask, see this <a href="howtoplay.html">Instruction-Kit</a></div>
+	
+			  <div class="sub header">zhajibi.io养鸡界面</div>
+			  <div class="sub header">由于极端的网站流行，交换可能会下降，但智能合约永远不会睡觉。</div>
+			  <div class="sub header">使用此备用界面可以安全地检查您的甜蜜红利。</div>
+			  <div class="sub header">如果这是您第一次使用Metamask，请参阅此 <a href="howtoplay.html">指令套件</a></div>
 			</h2>
 			</div>
 		</div>
@@ -163,13 +162,13 @@
 				<div class="ui grid app testframe">
 					<div class="row">
 						<div class="column masternode hidden" style="text-align: center;">
-							<h2>You are currently running a <a id="masternode-link" href="/?masternode=0x">masternode</a>.</h2>
+							<h2>您当前正在运行<a id="masternode-link" href="/?masternode=0x">masternode</a>.</h2>
 							<img src="https://cdn.discordapp.com/attachments/409611939585720321/416791323635613696/ahhh-shit-browsers4.gif" alt="">
 							<!--<p>You are currently holding 100 or more tokens, this means you're now running a Masternode! <br> You receive <strong>30% of the dividends</strong> made by anyone purchasing tokens with your masternode link.</p> -->
-							<p>You are currently holding enough tokens to run a Masternode! <br> You receive <strong>33% of the fee</strong> someone would otherwise pay into the contract when buying in!</p>
+							<p>您目前持有足够的令牌来运行 Masternode! <br> 您收到 <strong>33% 的费用</strong> ，否则有人会在购买时支付合同费用。</p>
 							<div class="link">
-								<span>Your unique masternode link is</span>
-								<a href="/?masternode=0x">https://p3d-bot.github.io/buy.html?masternode=0x123456</a>
+								<span>你唯一的masternode链接是/span>
+								<a href="/?masternode=0x">https://liang55.github.io/buy.html?masternode=0x123456</a>
 							</div>
 							<div class="ui divider"></div>
 						</div>
@@ -177,11 +176,10 @@
 					<div class="two column row divided">
 						<div class="column buy">
 							<h2 class="ui aligned icon header">
-							  <img src="img/buy.png" alt="">
-							  Buy
+							  <img src="img/buy.png" alt="">购买
 							</h2>
-							<p>Unit = Ethereum </p>
-							<p>Due to Eth Network Congestion, please use more than 2 gwei gas prices.</p>
+							<p>单位=以太坊 </p>
+							<p>由于Eth网络拥塞，请使用超过2 gwei的天然气价格。</p>
 							<div class="ui divider"></div>
 							<div class="ui centered grid">
 								<div class="row">
@@ -196,14 +194,14 @@
 								</div>
 								<div class="row no-padding">
 									<div class="column" style="text-align: center;">
-										<span class="approx">Type in a number..</span>
+										<span class="approx">输入一个数字..</span>
 									</div>
 								</div>
 								<div class="row">
 									<div class="six wide column">
 										<button class="ui right labeled massive icon button">
 											<i class="right arrow icon"></i>
-											Buy
+											购买
 										</button>
 									</div>
 								</div>
@@ -212,9 +210,9 @@
 						<div class="column sell">
 							<h2 class="ui aligned icon header">
 							  <img src="img/sell.png" alt="">
-							  SELL
+							  卖
 							</h2>
-							<p>Unit = Tokens.</p>
+							<p>单位=代币。</p>
 							<p></p>
 							<div class="ui divider"></div>
 							<div class="ui centered grid">
@@ -230,14 +228,14 @@
 								</div>
 								<div class="row no-padding">
 									<div class="column" style="text-align: center;">
-										<span class="approx">Type in a number..</span>
+										<span class="approx">输入一个数字..</span>
 									</div>
 								</div>
 								<div class="row">
 									<div class="six wide column">
 										<button class="ui right labeled massive icon button">
 											<i class="right arrow icon"></i>
-											Sell
+											卖
 										</button>
 									</div>
 								</div>
@@ -263,7 +261,7 @@
 											<div class="row no-padding">
 												<div class="column" style="text-align: center;">
 													<h2 class="ui header">
-														Global
+														全球
 													</h2>
 												</div>
 											</div>
@@ -272,11 +270,11 @@
 
 													<span class="eth">
 														<img class="ui medium circular image" src="https://i.imgur.com/pTht7qE.png">
-														<b id="ethInContract">- ethereum</b> in contract.
+														<b id="ethInContract">- eth</b> 合约中
 													</span>
 													<span class="tokens">
 														<img class="ui medium circular image" src="https://media.discordapp.net/attachments/401301420575293440/415274787578052618/PowH_Logo_V2_Glow_Final_Concept_invert.png?width=522&height=576">
-														<b id="tokensInCirculation">- tokens</b> in circulation.
+														<b id="tokensInCirculation">- tokens</b>流通中
 													</span>
 											    </div>
 										    </div>
@@ -287,14 +285,14 @@
 											<div class="row no-padding">
 												<div class="column" style="text-align: center;">
 													<h2 class="ui header">
-														Wallet
+														钱包
 													</h2>
 												</div>
 											</div>
 										    <div class="row">
 										    	<div class="column eight wide app stats bubble" id="myTokens">
 													<div class="ui circular segment">
-														<span class="identifier">Tokens <span class="soft">(P3D)</span></span>
+														<span class="identifier">代币 <span class="soft">(P3D)</span></span>
 														<span class="count">-</span>
 														<span class="converted">(-USDT)</span>
 
@@ -302,7 +300,7 @@
 											    </div>
 											    <div class="column eight wide app stats bubble" id="myDividends">
 													<div class="ui circular segment">
-														<span class="identifier">Dividends <span class="soft">(ETH)</span></span>
+														<span class="identifier">股息 <span class="soft">(ETH)</span></span>
 														<span class="count">-</span>
 														<span class="converted">(-USDT)</span>
 
@@ -316,15 +314,15 @@
 											<div class="row no-padding">
 												<div class="column" style="text-align: center;">
 													<h2 class="ui header">
-														Actions
+														操作
 													</h2>
 												</div>
 											</div>
 										    <div class="row">
 										    	<div class="column">
-								    					<button id="reinvest" class="ui huge button">Reinvest dividends</button>
-								    	<button id="withdraw" class="ui huge button">Withdraw dividends</button>
-								    	<a href="https://etherscan.io/address/0xb3775fb83f7d12a36e0475abdd1fca35c091efbe" target="_new"><button class="ui huge button">View Etherscan</button></a>
+								    					<button id="reinvest" class="ui huge button">再投资股息</button>
+								    	<button id="withdraw" class="ui huge button">提取股息</button>
+								    	<a href="https://etherscan.io/address/0xb3775fb83f7d12a36e0475abdd1fca35c091efbe" target="_new"><button class="ui huge button">查看Etherscan</button></a>
 								    				</div>
 										    </div>
 										</div>
@@ -338,9 +336,9 @@
 							<div class="ui divider"></div>
 							<h2 class="ui aligned icon header">
 							  <i class="circular inverted blue exchange alternate icon"></i>
-							  TRANSFER
+							  转让
 							</h2>
-							<p>Unit = Tokens: Be aware that sending tokens immediately withdraws your dividends so they're not lost!</p>
+							<p>单位=代币：请注意，发送代币会立即撤回您的股息，这样他们就不会丢失！</p>
 							<div class="ui divider"></div>
 							<div class="ui centered grid">
 								<div class="row">
@@ -363,14 +361,14 @@
 								</div>
 								<div class="row no-padding">
 									<div class="column" style="text-align: center;">
-										<span class="approx">Type in a valid address and token amount..</span>
+										<span class="approx">输入有效的地址和令牌金额..</span>
 									</div>
 								</div>
 								<div class="row">
 									<div class="six wide column">
 										<button class="ui right labeled massive icon button">
 											<i class="right arrow icon"></i>
-											Transfer
+											转让
 										</button>
 									</div>
 								</div>
@@ -379,19 +377,19 @@
 					</div>
 				</div>
 				<div class="ui active inverted dimmer" id="loadingSpinner">
-				     <div class="ui massive text loader" id="loadingText">Connecting with metamask...<br>
-					 <noscript>You need to enable JavaScript to run this app.</noscript></div>
+				     <div class="ui massive text loader" id="loadingText">连接 metamask...<br>
+					 <noscript>您需要启用JavaScript才能运行此应用。</noscript></div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script src="/lib/ls.js"></script>
-	<script src="/lib/alertify.js"></script>
+	<script src="./lib/ls.js"></script>
+	<script src="./lib/alertify.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.1/bluebird.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.js"></script>
-	<script src="/lib/web3.min.js"></script>
-  	<script src="/lib/buy.js"></script>
+	<script src="./lib/web3.min.js"></script>
+  	<script src="./lib/buy.js"></script>
 	
 </body>
 </html>
